--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -46,3 +46,138 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+body {
+        min-width:1024px;
+        width:90%;
+        padding:0;
+        margin:0 5%;
+        position:relative;
+        font: normal 87.5% "Lucida Sans", Arial, Helvetica, sans-serif;
+    }
+
+    h1 {
+        margin:0;
+        padding:0;
+        font-size: 1.5em;        /* 24px / 16px = 1.5em */
+        font-weight:normal;
+        text-transform: uppercase;
+    }
+
+    div,p,ul,ol,section,article {
+        font-size: 1em;
+        line-height: 1.5em;
+    }
+
+    body > header {
+        height:100px;
+    }
+
+    body > header > h1 {
+        margin:0;
+        padding:0;
+    }
+
+    .slideshow {
+        float:left;
+        width:60.14%;
+        margin:0 0.83%;
+        overflow:hidden;
+        position:relative;
+    }
+
+    .slideshow img {
+        width:100%;
+    }
+
+    .slideshow nav {
+        position:absolute;
+        top:10px;
+        left:10px;
+    }
+
+    .slideshow .caption {
+        position:absolute;
+        bottom:0;
+        left:0;
+        background:rgba(0,0,0,0.5);
+    }
+
+    .details {
+        float:left;
+        width:36.54%;
+        margin:0 0.83%;
+        overflow:hidden;
+    }
+
+    .thumbnails {
+        width:62.63%;
+        overflow:auto;
+        margin:0 0 0 0;
+        padding: 0 0 0 0;
+        clear:both;
+    }
+
+    .thumbnails ul {
+        margin:0 0 0 0;
+        padding:0 0 0 0;
+    }
+
+    .thumbnails li {
+        margin:0 0 0 0;
+        padding:0 0 0 0;
+        list-style: none;
+        float:left;
+        background:#ccc;
+        width: 9.838%;
+        margin-left: 1.331%;
+        margin-right: 1.331%;
+    }
+
+/* expanded slideshow styles */
+    .min {
+        position:relative;
+        float:left;
+        width:60.14%;
+        margin:0 0.83%;
+    }
+
+    .start {
+        float:none;
+        position:absolute;
+        top:100px;
+        z-index:1000;
+        overflow:visible;
+    }
+
+    .max {
+        top:20px;
+        left:0px;
+        width:100%;
+        margin:0 0 0 0;
+        -moz-box-shadow: 0px 0px 8px 2px #888;
+        -webkit-box-shadow: 0px 0px 8px 2px #888;
+        -o-box-shadow: 0px 0px 8px 2px #888;
+        -ms-box-shadow: 0px 0px 8px 2px #888;
+        box-shadow: 0px 0px 12px 4px #ccc;
+        -webkit-transition: all .5s ease-out;
+        -moz-transition: all .5s ease-out;
+        transition: all .5s ease-out;
+    }
+
+    .return {
+        position:absolute;
+        top:100px;
+        width:60.14%;
+        margin:0 0.83%;
+        -webkit-transition: all .5s ease-out;
+        -moz-transition: all .5s ease-out;
+        transition: all .5s ease-out;
+    }
+
+    .shim {
+        float:left;
+        width:60.14%;
+        margin:0 0.83%;
+    }
