--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -54,7 +54,7 @@ body {
         padding:0;
         margin:0 5%;
         position:relative;
-        font: normal 87.5% "Lucida Sans", Arial, Helvetica, sans-serif;
+        font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
     }
 
     h1 {
