--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -151,6 +151,10 @@ body {
         margin-right: 1.331%;
     }
 
+    .thumbnails img {
+        width:100%
+    }
+
     .more {
         float:left;
         width:36.54%;
