--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -109,8 +109,8 @@
             var d = $(".details");
             var e = $(".thumbnails ul");
             var width = a.width();
-            var height = width * .61803;
-            var height = width * .75;
+            //var height = width * .61803;
+            //var height = width * .75;
             var thumb_width = b.width();
             var total_width = c.width();
             var margin = total_width * .013331;
@@ -119,7 +119,7 @@
             b.css('margin-top', margin);
             b.css('margin-bottom', margin);
             c.css('margin-bottom', margin);
-            d.css('height', height);
+            //d.css('height', height);
             d.css('margin-bottom', margin);
     }
 
