--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -162,7 +162,7 @@ body {
     .more {
         float:left;
         width:36.54%;
-        margin:0 0.83%;
+        margin:0;
     }
 
 /* expanded slideshow styles */
