--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -118,7 +118,7 @@ body {
         bottom:0;
         left:0;
         background:rgba(0,0,0,0.7);
-        color:#000;
+        color:#fff;
         padding: 10px;
         margin: 0;
     }
