--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -120,7 +120,9 @@ body {
         background:rgba(0,0,0,0.7);
         color:#fff;
         padding: 10px;
-        margin: 0;
+        line-height:1.5em;
+        margin:0 1.33%;
+        width:97.34%;
     }
 
     .details {
