--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -119,9 +119,9 @@ body {
         left:0;
         background:rgba(0,0,0,0.7);
         color:#fff;
-        padding: 10px;
         line-height:1.5em;
-        margin:0 1.33%;
+        padding:0 1.33%;
+        margin: 0;
         width:97.34%;
     }
 
