--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -11,7 +11,10 @@
             </nav>
             <ul>
             {% for image in project.projectimage_set.all %}
-                <li><img src="{{ image.detail.url }}" alt="{{ image.caption }}" />{% if image.caption %}<p class="caption">{{ image.caption }}</p>{% endif %}</li>
+                <li>
+                    <img src="{{ image.detail.url }}" alt="{{ image.caption }}" />
+                    {% if image.caption %}<p class="caption">{{ image.caption }}</p>{% endif %}
+                </li>
             {% endfor %}
             </ul>
         </section>
