--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -172,6 +172,10 @@ body {
         float:left;
     }
 
+    footer {
+        clear:both;
+    }
+
 /* expanded slideshow styles */
     .min {
         position:relative;
