--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -36,7 +36,7 @@
 
     {% block js_head %}
     <!-- All JavaScript at the bottom, except for Modernizr / Respond. -->
-    <script src="{{ STATIC_URL }}js/libs/modernizr-2.0.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
     <script src="{{ STATIC_URL }}js/libs/respond.min.js"></script>
     {% endblock js_head %}
 
