--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -114,7 +114,7 @@ body {
     .thumbnails {
         width:62.63%;
         overflow:auto;
-        margin:0 0 0 0;
+        margin:5% 0;
         padding: 0 0 0 0;
         clear:both;
     }
@@ -156,11 +156,11 @@ body {
         left:0px;
         width:100%;
         margin:0 0 0 0;
-        -moz-box-shadow: 0px 0px 8px 2px #888;
-        -webkit-box-shadow: 0px 0px 8px 2px #888;
-        -o-box-shadow: 0px 0px 8px 2px #888;
-        -ms-box-shadow: 0px 0px 8px 2px #888;
-        box-shadow: 0px 0px 12px 4px #ccc;
+        -moz-box-shadow: 0px 0px 8px 2px #999;
+        -webkit-box-shadow: 0px 0px 8px 2px #999;
+        -o-box-shadow: 0px 0px 8px 2px #999;
+        -ms-box-shadow: 0px 0px 8px 2px #999;
+        box-shadow: 0px 0px 12px 4px #999;
         -webkit-transition: all .5s ease-out;
         -moz-transition: all .5s ease-out;
         transition: all .5s ease-out;
