--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -108,7 +108,7 @@
             var d = $(".details");
             var e = $(".thumbnails ul");
             var width = a.width();
-            //var height = width * .61803;
+            var height = width * .667;
             //var height = width * .75;
             var thumb_width = b.width();
             var total_width = c.width();
@@ -118,7 +118,7 @@
             b.css('margin-top', margin);
             b.css('margin-bottom', margin);
             c.css('margin-bottom', margin);
-            //d.css('height', height);
+            d.css('height', height);
             d.css('margin-bottom', margin);
     }
 
