--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -114,6 +114,7 @@
             var total_width = c.width();
             var margin = total_width * .013331;
 
+            a.css('height', height);
             b.css('height', thumb_width);
             b.css('margin-top', margin);
             b.css('margin-bottom', margin);
