--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -1,20 +1,31 @@
 {% extends "base.html" %}
 {% load generic_flatblocks %}
-{% load portfolio_tags %}
 {% block content %}
-    <article id="profile" class="text featured">
-    {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-    <p><a href="#">Read More</a></p>
-    </article>
-    {% get_featured_projects %}
-    {% for project in featured_project_list %}
+    {% for project in project_list|slice:":1" %}
         <article class="project featured">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
                 {% endif %}
             {%  endfor %}
-        {{ project.name }}
         </article>
     {% endfor %}
+    <article id="profile" class="text featured">
+    {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+    <p><a href="#">Read More</a></p>
+    </article>
+    {% for project in project_list|slice:"1:" %}
+        <article class="project featured">
+            {% for image in project.projectimage_set.all %}
+                {% if image.is_main %}
+                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                {% endif %}
+            {%  endfor %}
+        </article>
+    {% endfor %}
+    <article id="profile" class="text featured">
+    {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+    <p><a href="#">Read More</a></p>
+    </article>
+
 {% endblock content %}
