--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -1,12 +1,21 @@
 {% extends "base.html" %}
 {% load generic_flatblocks %}
 {% block content %}
+    {% for project in project_list|slice:":1" %}
+        <article class="project">
+            {% for image in project.projectimage_set.all %}
+                {% if image.is_main %}
+                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                {% endif %}
+            {%  endfor %}
+        </article>
+    {% endfor %}
     <article id="profile" class="text featured">
     {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
     <p><a href="#">Read More</a></p>
     </article>
-    {% for project in project_list %}
-        <article class="project featured">
+    {% for project in project_list_slice:"1:" %}
+        <article class="project">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
