--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -14,7 +14,7 @@
     {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
     <p><a href="#">Read More</a></p>
     </article>
-    {% for project in project_list_slice:"1:" %}
+    {% for project in project_list|slice:"1:" %}
         <article class="project">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
