--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -7,6 +7,7 @@
     </article>
     {% for project in project_list %}
         <article class="project">
+            {{ project.name }}
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
