--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -15,7 +15,27 @@
     {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
     <p><a href="#">Read More</a></p>
     </article>
-    {% for project in project_list|slice:"1:" %}
+    {% for project in project_list|slice:"1:7" %}
+        <article class="project">
+            {{ project.name }}
+            {% for image in project.projectimage_set.all %}
+                {% if image.is_main %}
+                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                {% endif %}
+            {%  endfor %}
+        </article>
+    {% endfor %}
+    {% for project in project_list|slice:"7:7" %}
+        <article class="project">
+            {{ project.name }}
+            {% for image in project.projectimage_set.all %}
+                {% if image.is_main %}
+                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.featured.url }}" /></a>
+                {% endif %}
+            {%  endfor %}
+        </article>
+    {% endfor %}
+    {% for project in project_list|slice:"8:" %}
         <article class="project">
             {{ project.name }}
             {% for image in project.projectimage_set.all %}
