--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -25,7 +25,11 @@
             {%  endfor %}
         </article>
     {% endfor %}
-    {% for project in project_list|slice:"7:7" %}
+    <article id="profile" class="text featured">
+    {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+    <p><a href="#">Read More</a></p>
+    </article>
+    {% for project in project_list|slice:"7" %}
         <article class="project">
             {{ project.name }}
             {% for image in project.projectimage_set.all %}
