--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -3,7 +3,6 @@
 {% block content %}
     {% for project in project_list|slice:":1" %}
         <article class="project">
-            {{ project.name }}
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
@@ -11,13 +10,12 @@
             {%  endfor %}
         </article>
     {% endfor %}
-    <article id="profile" class="text featured">
+    <article id="profile" class="text">
     {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
     <p><a href="#">Read More</a></p>
     </article>
     {% for project in project_list|slice:"1:7" %}
         <article class="project">
-            {{ project.name }}
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
@@ -25,13 +23,8 @@
             {%  endfor %}
         </article>
     {% endfor %}
-    <article id="profile" class="text featured">
-    {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-    <p><a href="#">Read More</a></p>
-    </article>
     {% for project in project_list|slice:"7:8" %}
-        <article class="project">
-            {{ project.name }}
+        <article class="project featured">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.featured.url }}" /></a>
@@ -41,7 +34,6 @@
     {% endfor %}
     {% for project in project_list|slice:"8:" %}
         <article class="project">
-            {{ project.name }}
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
@@ -49,5 +41,8 @@
             {%  endfor %}
         </article>
     {% endfor %}
+     <article id="news" class="text">
+        <p><a href="#">Read More</a></p>
+    </article>
 
 {% endblock content %}
