--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -49,7 +49,7 @@ table {
 
 
 body {
-        min-width:1024px;
+        min-width:960px;
         width:85%;
         padding:0;
         margin:0 7.5%;
@@ -94,6 +94,40 @@ body {
     body > .content {
         overflow: auto;
     }
+
+/********** HOMEPAGE ***********/
+.content > article {
+    float:left;
+    overflow: hidden;
+}
+
+article.project {
+    width:15%;
+    margin:0 0.833%;
+}
+
+article.project img {
+    width:100%;
+}
+
+article.featured {
+    width:31.67%
+}
+
+article#profile {
+    width:31.67%;
+    height:31.03%;
+    background:#d27193;
+}
+
+article#news {
+    width:48.33%;
+    height:31.03%;
+    background:#d27193;
+}
+
+
+
 
 /* slideshow */
     .slideshow {
