--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -46,3 +46,16 @@
     </article>
 
 {% endblock content %}
+{% block js_local %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var height = $(".project").height();
+            $(".text)".css('height', height);
+        });
+
+        $(window).resize(function() {
+            var height = $(".project").height();
+            $(".text)".css('height', height);
+        });
+    </script>
+{% endblock js_local %}
