--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -50,12 +50,12 @@
     <script type="text/javascript">
         $(document).ready(function() {
             var height = $(".project").height();
-            $(".text)".css('height', height);
+            $(".text").css('height', height);
         });
 
         $(window).resize(function() {
             var height = $(".project").height();
-            $(".text)".css('height', height);
+            $(".text").css('height', height);
         });
     </script>
 {% endblock js_local %}
