--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -115,6 +115,10 @@ article.featured {
     width:31.67%
 }
 
+article.text {
+    margin:0 0.833%;
+}
+
 article#profile {
     width:48.33%;
     background:#7eac32;
