--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -102,7 +102,8 @@ body {
 }
 
 article.project {
-
+    width:15%;
+    margin:0 0.833%;
 }
 
 article.project img {
@@ -111,19 +112,20 @@ article.project img {
 }
 
 article.featured {
+    width:31.67%
 }
 
 article.text {
-
+    margin:0 0.833%;
 }
 
 article#profile {
-
+    width:48.33%;
     background:#7eac32;
 }
 
 article#news {
-
+    width:31.67%;
     background:#d27193;
 }
 
