--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -61,16 +61,18 @@
         });
     </script>
     <script>
-      $(function(){
-
         var $container = $('.content');
 
-        $container.imagesLoaded( function(){
-          $container.masonry({
-            itemSelector : '.box'
-          });
-        });
-
-      });
+        $(window).resize(function(){
+             $container.imagesLoaded( function(){
+                $container.masonry({
+                    itemSelector: '.box',
+                    isResizable: false,
+                    // set columnWidth a fraction of the container width
+                    columnWidth: $container.width() / 6
+                });
+             });
+    // trigger resize to set up masonry on start-up
+        }).resize();
     </script>
 {% endblock js_local %}
